Make upload installer run on mac instance
Signed-off-by: Kevin Li <cnkevin@amazon.com>

--- a/.github/workflows/upload-installer-to-release.yaml
+++ b/.github/workflows/upload-installer-to-release.yaml
@@ -29,7 +29,7 @@ jobs:
 
   upload-installers:
     needs: get-tag-name
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, macos, release]
     steps:
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v2
