chore: Update Go linter to v1.53.3 and resolve errors
Signed-off-by: Austin Vazquez <macedonv@amazon.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,9 +54,9 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           # Pin the version in case all the builds start to fail at the same time.
-          # There may not be an automatic way (e.g., dependabot) to update a specific parameter of a Github Action,
+          # There may not be an automatic way (e.g., dependabot) to update a specific parameter of a GitHub Action,
           # so we will just update it manually whenever it makes sense (e.g., a feature that we want is added).
-          version: v1.51.2
+          version: v1.53.3
           args: --fix=false --timeout=5m
   go-mod-tidy-check:
     runs-on: ubuntu-latest
