--- a/finch.yaml
+++ b/finch.yaml
@@ -176,9 +176,9 @@ provision:
     mkdir -p  ~/.local/share/cni
     sudo mount --bind /mnt/lima-finch/cni  ~/.local/share/cni
 
+    # Make sure buildkit is restarted with containerd, so it uses the correct UUID
+    sudo systemctl add-requires buildkit.service containerd.service
     sudo systemctl restart containerd.service
-    # Restart buildkit to ensure it's using the correct containerd UUID
-    sudo systemctl restart buildkit.service
 
 # Probe scripts to check readiness.
 # 🟢 Builtin default: null
