--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -126,7 +126,7 @@ jobs:
       - run: |
           git status
           git clean -f -d
-          REGISTRY=${{ secrets.REGISTRY }} make test-e2e
+          REGISTRY=${{ env.REGISTRY }} make test-e2e
         shell: zsh {0}
   e2e-tests-for-docker-compat:
     strategy:
@@ -174,7 +174,7 @@ jobs:
       - run: |
           git status
           git clean -f -d
-          FINCH_DOCKER_COMPAT=1 REGISTRY=${{ secrets.REGISTRY }} make test-e2e
+          FINCH_DOCKER_COMPAT=1 REGISTRY=${{ env.REGISTRY }} make test-e2e
         shell: zsh {0}
   mdlint:
     runs-on: ubuntu-latest
