Add codeowner path to ci-docs.yaml file
Signed-off-by: Vishwas Siravara <siravara@amazon.com>

--- a/.github/workflows/ci-docs.yaml
+++ b/.github/workflows/ci-docs.yaml
@@ -15,12 +15,14 @@ on:
     paths:
       - '**.md'
       - 'contrib/**'
+      - '.github/CODEOWNERS'
   pull_request:
     branches:
       - main
     paths:
       - '**.md'
       - 'contrib/**'
+      - 'github/CODEOWNERS'
 
 jobs:
   gen-code-no-diff:
