--- a/.github/workflows/ci-docs.yaml
+++ b/.github/workflows/ci-docs.yaml
@@ -22,7 +22,7 @@ on:
     paths:
       - '**.md'
       - 'contrib/**'
-      - 'github/CODEOWNERS'
+      - '.github/CODEOWNERS'
 
 jobs:
   gen-code-no-diff:
