--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,6 @@
 # Every field is optional, even an empty file would work
 memory: 4GiB
 cpus: 4
+creds_helpers: 
+  - ecr-login
+soci_snapshotter: true
