fix: configure aws creds in sync submodules/deps action
Signed-off-by: Gavin Inglis <giinglis@amazon.com>

--- a/.github/workflows/sync-submodules-and-deps.yaml
+++ b/.github/workflows/sync-submodules-and-deps.yaml
@@ -16,6 +16,13 @@ jobs:
           submodules: recursive
           token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: configure aws credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-region: ${{ secrets.REGION }}
+          role-to-assume: ${{ secrets.ROLE }}
+          role-session-name: sync-submodules-and-deps-session
+
       - name: Update submodules
         run: |
           git submodule update --remote
