--- a/finch.yaml
+++ b/finch.yaml
@@ -76,6 +76,11 @@ mounts:
   # 🟢 Builtin default: false
   # 🔵 This file: true (only for "/tmp/lima")
   writable: true
+- location: "/var/folders"
+  writable: true
+# Because readlink /var => private/var
+- location: "/private/var/folders"
+  writable: true
 
 # Lima disks to attach to the instance. The disks will be accessible from inside the
 # instance, labeled by name. (e.g. if the disk is named "data", it will be labeled
