--- a/finch.yaml
+++ b/finch.yaml
@@ -176,7 +176,9 @@ provision:
     mkdir -p  ~/.local/share/cni
     sudo mount --bind /mnt/lima-finch/cni  ~/.local/share/cni
 
-    sudo systemctl restart containerd.service  
+    # Make sure buildkit is restarted with containerd, so it uses the correct UUID
+    sudo systemctl add-requires buildkit.service containerd.service
+    sudo systemctl restart containerd.service
 
 # Probe scripts to check readiness.
 # 🟢 Builtin default: null
