--- a/.github/workflows/build-and-test-pkg.yaml
+++ b/.github/workflows/build-and-test-pkg.yaml
@@ -106,7 +106,8 @@ jobs:
           aws s3 cp "s3://${{ secrets.INSTALLER_PRIVATE_BUCKET_NAME }}/Finch-$version.msi" ./Finch.msi
       - name: Install MSI silently
         run: |
-          Start-Process 'Finch.msi' -ArgumentList '/quiet' -Wait
+          Start-Process './Finch.msi' -ArgumentList '/quiet /l*v "./install.log"' -Wait
+          Get-Content "./install.log" -Raw
       - name: Run Finch version command
         run: |
           finch version 
