--- a/.github/workflows/build-and-test-pkg.yaml
+++ b/.github/workflows/build-and-test-pkg.yaml
@@ -110,7 +110,8 @@ jobs:
           $env:PATH = [System.Environment]::GetEnvironmentVariable("PATH","Machine") + ";" + [System.Environment]::GetEnvironmentVariable("PATH","User")
       - name: Run Finch version command
         run: |
-          & "C:\Program Files\Finch\bin\finch.exe" version
+          Write-Output $env:PATH
+          & "C:\Program Files\Finch\bin\finch.exe" version -ErrorAction SilentlyContinue
       - name: Run e2e tests
         run: |
           # set path to use newer ssh version
