--- a/cmd/finch/doc.TEMPLATE
+++ b/cmd/finch/doc.TEMPLATE
@@ -2,9 +2,9 @@
 title: "{{ .CmdPath }}"
 ---
 
-## {{ .CmdPath }}{{if gt (len .Description) 0}}
+## {{ .CmdPath }}
 
-{{ .Description }}
+{{if gt (len .Description) 0}}{{ .Description }}
 
 {{end}}{{if gt (len .Properties) 0}}### Properties
 
