ci: require shellcheck to pass
Signed-off-by: River Phillips <riverphillips1@gmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -72,7 +72,8 @@ jobs:
         uses: ludeeus/action-shellcheck@2.0.0
         with:
           version: v0.9.0 
-        continue-on-error: true
+          severity: warning
+        continue-on-error: false
   go-mod-tidy-check:
     runs-on: ubuntu-latest
     steps:
